apps/matrix/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: matrix
  labels:
    istio-injection: enabled
    name: matrix
