apps/matrix/istio-gateway.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: matrix-gateway
  namespace: matrix
spec:
  selector:
    istio: ilb-gateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "sheet.gluk0.sh"
