apps/matrix/istio-virtualservice.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: matrix-synapse
  namespace: matrix
spec:
  hosts:
  - "commune.gluk0.sh"
  gateways:
  - matrix-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: matrix-synapse.matrix.svc.cluster.local
        port:
          number: 8008
